# Pellu

./: .dockerignore  .gitignore  Dockerfile.validator  README.md  docker-compose.yml  prometheus.yml  settings.gradle
.github/workflows/: ci.yml
admin-ui/: index.html
api-gateway-service/: Dockerfile  build.gradle
api-gateway-service/src/main/resources/: application.yaml
auth-service/: Dockerfile  build.gradle
auth-service/src/main/resources/: application.yaml
auth-service/src/main/resources/db/changelog/: db.changelog-auth.sql
docs/: FULL_DEPLOYMENT_GUIDE.md  LOCAL_DEPLOYMENT_GUIDE.md  RUN.md
k8s-manifests/: api-gateway-deployment.yaml  auth-deployment.yaml  solana-connector-deployment.yaml  trading-engine-deployment.yaml
k8s-manifests/infra/: kafka.yaml  postgres.yaml  solana.yaml
private_key/: array_bytes_to_base58.py  id.json  private_key.txt
smart-contract/: Anchor.toml  Cargo.toml  build_bpf.sh  build_fast.sh  build_final.sh  build_v29.sh  lib.rs
smart-contract/programs/dfa_advanced_platform/: Cargo.toml
smart-contract/programs/dfa_advanced_platform/src/: tests.rs
smart-contract/src/: lib.rs  tests.rs
solana-connector-service/: Dockerfile  build.gradle
solana-connector-service/src/main/resources/: application.yaml
tests/: extended_scenarios_test.py  k8s_integration_test.py  load_test_locust.py  locust.md
trading-engine-service/: Dockerfile  build.gradle
trading-engine-service/src/main/resources/: application.yaml
trading-engine-service/src/main/resources/db/changelog/: db.changelog-master.sql
(+87 files in other folders)
