[workspace]
members = ["programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true

[patch.crates-io]
cpufeatures = { git = "https://github.com/RustCrypto/utils", tag = "cpufeatures-v0.2.16" }
block-buffer = { git = "https://github.com/RustCrypto/utils", tag = "block-buffer-v0.10.4" }
crypto-common = { git = "https://github.com/RustCrypto/traits", tag = "crypto-common-v0.1.6" }
digest = { git = "https://github.com/RustCrypto/traits", tag = "digest-v0.10.7" }
